# physicX

./: README.md
.github/workflows/: c-cpp.yml  go.yml  npm-publish-github-packages.yml  python-app.yml  python-package.yml  python-publish.yml
IDL/: constants.pro  law.pro  test.pro
PLP/: constants.plp  law.plp  main.plp  physicX.plp
c_c++/: Makefile  constants.h  import.h  law.c  law.h  main.c  mathlib.c  mathlib.h
fortran/: constants.f  constants.mod  hi.f  law.f  main.f  math.f  mk.sh
go/physicX/: go.mod  main.go
go/physicX/constants/: constants.go
go/physicX/law/: law.go
go/physicX/mathlib/: mathlib.go
haskell/: Makefile.sh  constants.hs  law.hs  main.hs  mathlib.hs  mk.sh
java/: Constants.java  Law.java  Mathlib.java  README.md  main.java
js/physicx/: README.md  package.json
js/physicx/src/: constants.js  index.js  law.js  mathlib.js
js/physicx/test/: package.json  test.js
lisp/: constants.lisp  law.lisp  main.lisp  mathlib.lisp  physicx.lisp
lua/: constants.lua  law.lua  main.lua  mathlib.lua  physicX.lua
mathematica/: PhysicX.wl  README.md  main.nb
mathematica/PhysicX/: Paclet.m  PhysicX.m
mathematica/PhysicX/Kernel/: init.m
php/: constants.php  law.php  main.php  mathlib.php  physicX.php
python/: README.md  pyproject.toml  requirements.txt
python/src/physicX/: __init__.py  constants.py  law.py  mathlib.py
python/test/: main.py
ruby/: README.md  physicX.gemspec
ruby/lib/: constants.rb  law.rb  mathlib.rb  physicX.rb
ruby/test/: main.rb
setl/: constants.setl  hi.setl  main.setl
simula/: hi.sim
