[build-system]
requires = ["setuptools>=61.0","numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "physicX"
version = "0.0.114"
authors = [
  { name="anonymous14725", email="anonymous14725@yahoo.com" },
]
description = "mathematics and physics library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU-GPLv3 License",
    "Operating System :: cross-platform",
]

[project.urls]
"Homepage" = "https://github.com/anonymous14725/physicX"
"Bug Tracker" = "https://github.com/anonymous14725/physicX/issues"
