[build-system]
requires = ["setuptools>=61.0","numpy>=1.19.2"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies"]
name = "physicX"
version = "0.0.115"
authors = [
  { name="anonymous14725", email="anonymous14725@yahoo.com" },
]
description = "mathematics and physics library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU-GPLv3 License",
    "Operating System :: cross-platform",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/anonymous14725/physicX"
"Bug Tracker" = "https://github.com/anonymous14725/physicX/issues"
